# invariant-sdk

./: .gitignore  Makefile  README.md  install.sh  test_clean_phase2.py  test_invariants.py  test_symbols.py
archive/legacy_2025/python/invariant_sdk/: engine.py  types.py
archive/legacy_2025/python/invariant_sdk/tools/: agent.py
kernel/: Cargo.toml
kernel/src/: bindings.rs  hnsw_crystal.rs  lib.rs  merkle.rs  start_crystal.rs
python/: MCP_README.md  pyproject.toml
python/.invariant/: overlay.jsonl
python/.invariant/uploads/: HALO_SPEC.md  HONEST_ANALYSIS.md  chapter_01.txt  chapter_02.txt  chapter_03.txt  chapter_04.txt  chapter_05.txt  chapter_06.txt  chapter_07.txt  prince.txt  ui_pages.py
python/invariant_sdk/: __init__.py  api.py  cli.py  engine.py  halo.py  mcp_server.py  merkle.py  operator_prompt.md  operators.py  overlay.py  physics.py  prompt.py  quantum.py  storage.py  tokenize.py  types.py  ui.py  ui_handler.py  ui_pages.py
python/invariant_sdk/core/: merkle.py  reactor.py
python/invariant_sdk/tools/: __init__.py  agent.py
python/tests/: test_merkle_l05.py  test_quantum.py  test_tokenize.py
python/ui_src/: graph3d.html  main.html
