[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-sdk"
version = "34.1.0"
description = "Deterministic Knowledge Engine - Python SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    # Core SDK is dependency‑light; embeddings are optional (see extras).
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
dev = ["pytest", "maturin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["invariant_sdk*"]
